--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.3"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "author": "",
+  "license": "ISC"
 }
